[package]
name = "topojson-rs"
version = "0.2.0"
edition = "2024"

[lib]
name = "topojson"
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.12.1"
pyo3 = { version = "0.27.0", features = ["macros", "serde"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
json = "0.12.4"
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
